remove review button in index page of lectures

--- a/app/views/lectures/index.html.erb
+++ b/app/views/lectures/index.html.erb
@@ -6,8 +6,7 @@
           <input type="search" id="lecture-search-box" class="form-control mx-auto" placeholder="検索..." aria-label="検索...">
         </div>
         <div class="mt-4">
-          <%= link_to "さがす", "#", class: "text-muted mr-3" %>
-          <%= link_to "レビューする", "#", class: "text-muted ml-3" %>
+          <%= link_to "さがす", "#", class: "text-muted" %>
         </div>
       </form>
     </div>
