show all lectures in index page of lectures

--- a/app/views/lectures/index.html.erb
+++ b/app/views/lectures/index.html.erb
@@ -47,4 +47,12 @@
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <% @lectures.each do |lecture| %>
+    <div class="col-sm-6 col-md-4 mb-5">
+      <%= render "lecture", lecture: lecture %>
+    </div>
+    <% end %>
+  </div>
 </div>
