fix show page design of lectures

--- a/app/views/lectures/index.html.erb
+++ b/app/views/lectures/index.html.erb
@@ -18,12 +18,12 @@
       <div class="card-group">
         <div class="card border-0">
           <div class="card-body">
-            <p>授業別</p>
+            <p class="font-weight-bold">授業別</p>
           </div>
         </div>
         <div class="card border-0">
           <div class="card-body">
-            <p>講師別</p>
+            <p class="font-weight-bold">講師別</p>
           </div>
         </div>
       </div>
@@ -36,12 +36,12 @@
       <div class="card-group">
         <div class="card border-0">
           <div class="card-body">
-            <p>授業別</p>
+            <p class="font-weight-bold">授業別</p>
           </div>
         </div>
         <div class="card border-0">
           <div class="card-body">
-            <p>講師別</p>
+            <p class="font-weight-bold">講師別</p>
           </div>
         </div>
       </div>
