--- a/app/views/lectures/_lecture.html.erb
+++ b/app/views/lectures/_lecture.html.erb
@@ -1,6 +1,6 @@
 <div class="shadow">
   <%= link_to(lecture, class: "text-muted") do %>
-  <div class="card mt-5">
+  <div class="card">
     <div class="card-body">
       <h5 class="card-title"><%= lecture.title %></h5>
       <p class="card-text"><%= lecture.content %></p>
