--- a/app/views/lectures/index.html.erb
+++ b/app/views/lectures/index.html.erb
@@ -12,26 +12,8 @@
     </div>
   </div>
 
-  <div class="card mt-5">
-    <h5 class="card-header">満足度ランキング</h5>
-    <div class="card-body">
-      <div class="card-group">
-        <div class="card border-0">
-          <div class="card-body">
-            <p class="font-weight-bold">授業別</p>
-          </div>
-        </div>
-        <div class="card border-0">
-          <div class="card-body">
-            <p class="font-weight-bold">講師別</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="card mt-5">
-    <h5 class="card-header">〇〇ランキング</h5>
+  <div class="card my-5">
+    <h5 class="card-header">評価の高い授業</h5>
     <div class="card-body">
       <div class="card-group">
         <div class="card border-0">
