--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,8 +1,8 @@
 <%= form_for(review, class: "form-inline") do |f| %>
   <div class="form-group row">
-    <%= f.label "授業名", class: "col-sm-3 col-form-label font-weight-bold" %>
+    <%= f.label "授業名", class: "col-sm-3 font-weight-bold" %>
     <div class="col-sm-9">
-      <%= @lecture.title %>
+      <%= link_to @lecture.title, @lecture, class: "text-muted" %>
       <%= hidden_field_tag :lecture_id, @lecture.id %>
     </div>
   </div>
