--- a/app/views/lectures/_lecture.html.erb
+++ b/app/views/lectures/_lecture.html.erb
@@ -3,7 +3,7 @@
   <div class="card">
     <div class="card-body">
       <h5 class="card-title"><%= lecture.title %></h5>
-      <p class="card-text"><%= lecture.content %></p>
+      <p class="card-text"><%= lecture.content.truncate(50, separator: ' ') %></p>
     </div>
   </div>
   <% end %>
