--- a/app/views/lectures/show.html.erb
+++ b/app/views/lectures/show.html.erb
@@ -1,60 +1,61 @@
 <div id="lectures-show" class="container my-5">
-  <div class="row ">
+  <div class="row">
     <div class="col-12">
       <div class="card mt-5">
-        <h5 class="card-header">
+
+        <h5 class="card-header main-title">
           <%= @lecture.title %>
           <%= link_to "レビューする", new_review_path(lecture_id: @lecture.id), class: "btn btn-secondary float-right shadow" %>
         </h5>
-        <div class="card-body">
-          <div class="row">
-            <div class="col-8">
-              <p class="font-weight-bold">概要</p>
-              <p><%= @lecture.content %></p>
-            </div>
-            <div class="col-4">
-              <p class="font-weight-bold">評価</p>
-              <p><%= @average_rate %> / 5.0</p>
-            </div>
 
-            <div class="col-12 mt-4">
-              <p class="font-weight-bold">授業毎の内容</p>
-              <div class="row">
-                <div class="col-sm-6">
-                  <p>1.</p>
-                  <p>2.</p>
-                  <p>3.</p>
-                  <p>4.</p>
-                  <p>5.</p>
-                </div>
-                <div class="col-sm-6">
-                  <p>6.</p>
-                  <p>7.</p>
-                  <p>8.</p>
-                  <p>9.</p>
-                  <p>10.</p>
-                </div>
+        <div class="card-body row">
+          <div class="col-8">
+            <p class="font-weight-bold">概要</p>
+            <p><%= @lecture.content %></p>
+          </div>
+          <div class="col-4">
+            <p class="font-weight-bold">評価</p>
+            <p class="ave-rate"><%= @average_rate %> / 5.0</p>
+          </div>
+
+          <div class="col-12 mt-4">
+            <p class="font-weight-bold">授業毎の内容</p>
+            <div class="row">
+              <div class="col-sm-6">
+                <p>1.</p>
+                <p>2.</p>
+                <p>3.</p>
+                <p>4.</p>
+                <p>5.</p>
+              </div>
+              <div class="col-sm-6">
+                <p>6.</p>
+                <p>7.</p>
+                <p>8.</p>
+                <p>9.</p>
+                <p>10.</p>
               </div>
             </div>
+          </div>
 
-            <div class="col-sm-6 mt-4">
-              <p class="font-weight-bold">良いところ</p>
-              <ul>
-              <% @lecture.reviews.newest.limit(5).each do |review| %>
-                <li><%= review.good_point %></li>
-              <% end %>
-              </ul>
-            </div>
-            <div class="col-sm-6 mt-4">
-              <p class="font-weight-bold">悪いところ</p>
-              <ul>
-              <% @lecture.reviews.newest.limit(5).each do |review| %>
-                <li><%= review.bad_point %></li>
-              <% end %>
-              </ul>
-            </div>
-          <div>
+          <div class="col-sm-6 mt-4">
+            <p class="font-weight-bold">良いところ</p>
+            <ul>
+            <% @lecture.reviews.newest.limit(5).each do |review| %>
+              <li><%= review.good_point %></li>
+            <% end %>
+            </ul>
+          </div>
+          <div class="col-sm-6 mt-4">
+            <p class="font-weight-bold">悪いところ</p>
+            <ul>
+            <% @lecture.reviews.newest.limit(5).each do |review| %>
+              <li><%= review.bad_point %></li>
+            <% end %>
+            </ul>
+          </div>
         </div>
+
       </div>
     </div>
   </div>
