--- a/app/views/lectures/show.html.erb
+++ b/app/views/lectures/show.html.erb
@@ -9,11 +9,11 @@
         </h5>
 
         <div class="card-body row">
-          <div class="col-8">
+          <div class="col-sm-8">
             <p class="font-weight-bold">概要</p>
             <p><%= @lecture.content %></p>
           </div>
-          <div class="col-4">
+          <div class="col-sm-4">
             <p class="font-weight-bold">評価</p>
             <p class="ave-rate"><%= @average_rate %> / 5.0</p>
           </div>
