--- a/app/views/lectures/_lecture.html.erb
+++ b/app/views/lectures/_lecture.html.erb
@@ -2,6 +2,10 @@
   <%= link_to(lecture, class: "text-muted") do %>
   <div class="card">
     <div class="card-body">
+      <div class="mb-2">
+        <span class="badge badge-secondary">評価：<%= average_rate(lecture.reviews) %></span>
+        <span class="badge badge-secondary">レビュー数：<%= lecture.reviews.size %></span>
+      </div>
       <h5 class="card-title"><%= lecture.title %></h5>
       <p class="card-text"><%= lecture.content.truncate(100) %></p>
     </div>
