feature search logic for lectures

--- a/app/views/lectures/show.html.erb
+++ b/app/views/lectures/show.html.erb
@@ -63,7 +63,7 @@
   </div>
 
   <div class="row mt-5">
-    <p class="col-12 font-weight-bold ml-3">関連科目</p>
+    <p class="col-12 font-weight-bold ml-3 mb-4">関連科目</p>
     <% Lecture.lectures_related_to(@lecture).includes(:reviews).each do |lecture| %>
       <div class="col-sm-6 col-md-4 mb-5">
         <%= render "lecture", lecture: lecture %>
