--- a/app/views/lectures/index.html.erb
+++ b/app/views/lectures/index.html.erb
@@ -1,14 +1,17 @@
 <div id="lectures-index" class="container my-5">
   <div class="row">
     <div class="col">
-      <form class="text-center">
+
+      <%= form_tag search_lectures_path, method: :get do %>
         <div class="form-group">
-          <input type="search" id="lecture-search-box" class="form-control mx-auto" placeholder="検索..." aria-label="検索...">
+          <%= text_field_tag :search, '', id: "lecture-search-box", class: "form-control mx-auto", placeholder: "検索..." %>
         </div>
-        <div class="mt-4">
-          <%= link_to "さがす", "#", class: "text-muted" %>
+        <div class="mt-4 text-center">
+          <%= button_tag type: 'submit', class: "btn btn-default" do %>
+            さがす
+          <% end %>
         </div>
-      </form>
+      <% end %>
     </div>
   </div>
 
