--- a/app/views/lectures/index.html.erb
+++ b/app/views/lectures/index.html.erb
@@ -1,6 +1,6 @@
 <div id="lectures-index" class="container my-5">
   <div class="row">
-    <div class="col">
+    <div class="col-12">
 
       <%= form_tag search_lectures_path, method: :get do %>
         <div class="form-group">
@@ -15,6 +15,7 @@
     </div>
   </div>
 
+  <% if controller.action_name == "index" %>
   <div class="card my-5">
     <h5 class="card-header">いろんなランキング</h5>
     <div class="card-body">
@@ -42,6 +43,16 @@
       </div>
     </div>
   </div>
+  <% elsif controller.action_name == "search" %>
+  <div class="row">
+    <div class="col-12 my-4">
+      <% if @query.present? %>
+        <p class="normal-color-text mb-2">キーワード：「 <%= @query.join(" ") %> 」での検索結果</p>
+        <p class="mb-0"><span class="result-count"><%= @result_count %></span> 件ヒットしました。</p>
+      <% end %>
+    </div>
+  </div>
+  <% end %>
 
   <div class="row">
     <% @lectures.includes(:reviews).each do |lecture| %>
