--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -6,12 +6,12 @@
 
   <div class="collapse navbar-collapse" id="Navber">
     <ul class="navbar-nav ml-auto mb-3 mb-lg-0">
-      <li class="nav-item mt-3 mt-lg-0">
+      <!-- <li class="nav-item mt-3 mt-lg-0">
         <%= link_to "ログイン", "#", class: "text-muted mr-3" %>
       </li>
       <li class="nav-item mt-3 mt-lg-0">
         <%= link_to "新規登録", "#", class: "text-muted" %>
-      </li>
+      </li> -->
     </ul>
   </div>
 </nav>
