--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_for(review, class: "form-inline") do |f| %>
+  <%= render "partial/error_messages", resource: review %>
+
   <div class="form-group row">
     <%= f.label "授業名", class: "col-sm-3 font-weight-bold" %>
     <div class="col-sm-9">
@@ -17,14 +19,14 @@
   <div class="form-group row">
     <%= f.label :good_point, class: "col-sm-3 col-form-label font-weight-bold" %>
     <div class="col-sm-9">
-      <%= f.text_area :good_point, class: "form-control", placeholder: "例）ホゲホゲ" %>
+      <%= f.text_area :good_point, class: "form-control", placeholder: "例）特になし。" %>
     </div>
   </div>
 
   <div class="form-group row">
     <%= f.label :bad_point, class: "col-sm-3 col-form-label font-weight-bold" %>
     <div class="col-sm-9">
-      <%= f.text_area :bad_point, class: "form-control", placeholder: "例）ホゲホゲ" %>
+      <%= f.text_area :bad_point, class: "form-control", placeholder: "例）特になし。" %>
     </div>
   </div>
 
